# pico-midi-interface

./: CMakeLists.txt  README.md
inc/: midi_parser.h
src/: CMakeLists.txt  main.c  midi_parser.c
